// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/pages/notification.vue snapshot test renders Edit column if admin 1`] = `
<section class="section">
  <section>
    <div class="b-table">
      <!---->
      <!---->
      <div class="table-wrapper has-mobile-cards">
        <table class="table is-striped">
          <!---->
          <tbody>
            <tr draggable="false" class="">
              <td class="chevron-cell"><a role="button"><span class="icon"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a></td>
              <!---->
              <td class=""><button type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account"></i></span>
                  <!---->
                  <!----></button></td>
              <td data-label="タイトル" class="">
                Title 1
              </td>
              <td data-label="投稿日時" class="">
                2020/8/13 0:00:00
              </td>
              <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
              <!---->
            </tr>
            <!---->
            <!---->
            <tr draggable="false" class="">
              <td class="chevron-cell"><a role="button"><span class="icon"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a></td>
              <!---->
              <td class=""><button type="button" class="button is-info">
                  <!---->
                  <!---->
                  <!----></button></td>
              <td data-label="タイトル" class="">
                Title 2
              </td>
              <td data-label="投稿日時" class="">
                2020/8/13 0:00:00
              </td>
              <td data-label="Edit" class=""><a><span class="icon"><i class="mdi mdi-pencil-box-outline mdi-24px"></i></span></a></td>
              <!---->
            </tr>
            <!---->
            <!---->
          </tbody>
          <!---->
        </table>
      </div>
      <div class="level">
        <div class="level-left"></div>
        <div class="level-right">
          <div class="level-item">
            <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
              <ul class="pagination-list">
                <!---->
                <!---->
                <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
                <!---->
                <!---->
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </section>
</section>
`;

exports[`/pages/notification.vue snapshot test renders correctly if { locale: en } 1`] = `
<section class="section">
  <section>
    <div class="b-table">
      <!---->
      <!---->
      <div class="table-wrapper has-mobile-cards">
        <table class="table is-striped">
          <!---->
          <tbody>
            <tr draggable="false" class="">
              <td class="chevron-cell"><a role="button"><span class="icon"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a></td>
              <!---->
              <td class=""><button type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account"></i></span>
                  <!---->
                  <!----></button></td>
              <td data-label="Title" class="">
                Title 1
              </td>
              <td data-label="Date" class="">
                2020/8/13 0:00:00
              </td>
              <!---->
              <!---->
            </tr>
            <!---->
            <!---->
            <tr draggable="false" class="">
              <td class="chevron-cell"><a role="button"><span class="icon"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a></td>
              <!---->
              <td class=""><button type="button" class="button is-info">
                  <!---->
                  <!---->
                  <!----></button></td>
              <td data-label="Title" class="">
                Title 2
              </td>
              <td data-label="Date" class="">
                2020/8/13 0:00:00
              </td>
              <!---->
              <!---->
            </tr>
            <!---->
            <!---->
          </tbody>
          <!---->
        </table>
      </div>
      <div class="level">
        <div class="level-left"></div>
        <div class="level-right">
          <div class="level-item">
            <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
              <ul class="pagination-list">
                <!---->
                <!---->
                <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
                <!---->
                <!---->
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </section>
</section>
`;

exports[`/pages/notification.vue snapshot test renders correctly if { locale: ja } 1`] = `
<section class="section">
  <section>
    <div class="b-table">
      <!---->
      <!---->
      <div class="table-wrapper has-mobile-cards">
        <table class="table is-striped">
          <!---->
          <tbody>
            <tr draggable="false" class="">
              <td class="chevron-cell"><a role="button"><span class="icon"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a></td>
              <!---->
              <td class=""><button type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account"></i></span>
                  <!---->
                  <!----></button></td>
              <td data-label="タイトル" class="">
                Title 1
              </td>
              <td data-label="投稿日時" class="">
                2020/8/13 0:00:00
              </td>
              <!---->
              <!---->
            </tr>
            <!---->
            <!---->
            <tr draggable="false" class="">
              <td class="chevron-cell"><a role="button"><span class="icon"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a></td>
              <!---->
              <td class=""><button type="button" class="button is-info">
                  <!---->
                  <!---->
                  <!----></button></td>
              <td data-label="タイトル" class="">
                Title 2
              </td>
              <td data-label="投稿日時" class="">
                2020/8/13 0:00:00
              </td>
              <!---->
              <!---->
            </tr>
            <!---->
            <!---->
          </tbody>
          <!---->
        </table>
      </div>
      <div class="level">
        <div class="level-left"></div>
        <div class="level-right">
          <div class="level-item">
            <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
              <ul class="pagination-list">
                <!---->
                <!---->
                <li><a role="button" href="#" aria-current="true" class="pagination-link is-current ">1</a></li>
                <!---->
                <!---->
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </section>
</section>
`;

exports[`/pages/notification.vue snapshot test renders empty if { locale: en } 1`] = `
<section class="section">
  <section>
    <div class="b-table">
      <!---->
      <!---->
      <div class="table-wrapper has-mobile-cards">
        <table class="table is-striped">
          <!---->
          <tbody>
            <tr class="is-empty">
              <td colspan="1">
                <section class="section">
                  <div class="content has-text-grey has-text-centered">
                    <p>No data</p>
                  </div>
                </section>
              </td>
            </tr>
          </tbody>
          <!---->
        </table>
      </div>
      <div class="level">
        <div class="level-left"></div>
        <div class="level-right">
          <div class="level-item">
            <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
              <ul class="pagination-list">
                <!---->
                <!---->
                <!---->
                <!---->
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </section>
</section>
`;

exports[`/pages/notification.vue snapshot test renders empty if { locale: ja } 1`] = `
<section class="section">
  <section>
    <div class="b-table">
      <!---->
      <!---->
      <div class="table-wrapper has-mobile-cards">
        <table class="table is-striped">
          <!---->
          <tbody>
            <tr class="is-empty">
              <td colspan="1">
                <section class="section">
                  <div class="content has-text-grey has-text-centered">
                    <p>データがありません</p>
                  </div>
                </section>
              </td>
            </tr>
          </tbody>
          <!---->
        </table>
      </div>
      <div class="level">
        <div class="level-left"></div>
        <div class="level-right">
          <div class="level-item">
            <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
              <ul class="pagination-list">
                <!---->
                <!---->
                <!---->
                <!---->
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </section>
</section>
`;

exports[`/pages/notification.vue snapshot test renders loading skeleton 1`] = `
<section class="section">
  <section>
    <div class="b-table is-loading">
      <!---->
      <!---->
      <div class="table-wrapper has-mobile-cards">
        <table class="table is-striped">
          <!---->
          <tbody>
            <tr class="is-empty">
              <td colspan="1">
                <section class="section">
                  <div class="b-skeleton is-animated">
                    <div class="b-skeleton-item is-rounded"></div>
                  </div>
                  <div class="b-skeleton is-animated">
                    <div class="b-skeleton-item is-rounded"></div>
                  </div>
                  <div class="b-skeleton is-animated">
                    <div class="b-skeleton-item is-rounded"></div>
                  </div>
                </section>
              </td>
            </tr>
          </tbody>
          <!---->
        </table>
      </div>
      <div class="level">
        <div class="level-left"></div>
        <div class="level-right">
          <div class="level-item">
            <nav class="pagination"><a role="button" href="#" disabled="disabled" class="pagination-link pagination-previous"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></a> <a role="button" href="#" disabled="disabled" class="pagination-link pagination-next"><span class="icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></a>
              <ul class="pagination-list">
                <!---->
                <!---->
                <!---->
                <!---->
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </div>
  </section>
</section>
`;
